--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-pyinstaller==5.13.0
+pyinstaller
 google-api-python-client
 viam-sdk
-pynetworktables
+rpi_ws281x
+adafruit-circuitpython-neopixel
+adafruit-circuitpython-led-animation
+pyntcore
